# backup-mongodb

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yml  duties.py  pyproject.toml  test.toml
.github/: dependabot.yml  labeler.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup_python_env/: action.yml
.github/actions/uv-python-package/: action.yml
.github/workflows/: automated-tests.yml  commit-linter.yml  create-release.yml  devcontainer-checker.yml  labeler.yml  pr-linter.yml  publish-docker.yml  reusable-tests.yml  test-build-container.yml  test.yml  upload-codecov.yml
dev-templates/: .env.template
src/backup_mongodb/: __init__.py  __version__.py  constants.py  entrypoint.py  main.py
src/backup_mongodb/utils/: __init__.py  aws.py  backup.py  helpers.py  logging.py
tests/: __init__.py  conftest.py  test_backup.py  test_entrypoint.py  test_helpers.py
tests/fixtures/: archive.tgz
