[project]
    authors = [{ name = "Nate Landau", email = "github@natenate.org" }]
    dependencies = [
        "apscheduler>=3.11.0,<4",
        "environs>=14.2.0",
        "ezbak>=0.10.2",
        "nclutils>=1.0.1",
    ]
    description = "Docker container to backup MongoDB databases"
    license = "AGPL-3.0-or-later"
    name = "backup-mongodb"
    readme = "README.md"
    requires-python = ">=3.13"
    version = "1.3.0"

    [project.scripts]
        backup-mongodb = "backup_mongodb.entrypoint:main"

    [project.urls]
        homepage   = "https://github.com/natelandau/backup-mongodb"
        repository = "https://github.com/natelandau/backup-mongodb"

[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]

[dependency-groups]
    dev = [
        "commitizen>=4.8.3",
        "coverage>=7.9.1",
        "duty>=1.6.0",
        "mypy>=1.16.1",
        "pre-commit>=4.2.0",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=6.2.1",
        "pytest-env>=1.1.5",
        "pytest-mock>=3.14.1",
        "pytest-pretty-terminal>=1.1.0",
        "pytest-sugar>=1.0.0",
        "pytest-xdist>=3.7.0",
        "pytest>=8.4.1",
        "rich>=14.0.0",
        "ruff>=0.12.1",
        "shellcheck-py>=0.10.0.1",
        "time-machine>=2.16.0",
        "typos>=1.34.0",
        "yamllint>=1.37.1",
    ]

[tool.commitizen]
    bump_message               = "bump(release): v${current_version} → v${new_version}"
    changelog_merge_prerelease = true
    tag_format                 = "v${version}"
    update_changelog_on_bump   = true
    version_files              = ["src/backup_mongodb/constants.py:__version__"]
    version_provider           = "uv"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'pragma: no cover',
        'raise Abort',
        'raise Exit',
        'raise typer\.Exit',
    ]
    fail_under = 10
    precision = 1
    show_missing = true
    skip_covered = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = ".cache/.coverage"
    source       = ["src"]

[tool.coverage.xml]
    output = ".cache/coverage.xml"

[tool.mypy] # https://mypy.readthedocs.io/en/latest/config_file.html
    cache_dir                   = ".cache/mypy"
    disallow_any_unimported     = false
    disallow_subclassing_any    = false
    disallow_untyped_decorators = false
    disallow_untyped_defs       = true
    exclude                     = ['tests/']
    follow_imports              = "normal"
    ignore_missing_imports      = true
    junit_xml                   = ".cache/mypy.xml"
    no_implicit_optional        = true
    pretty                      = false
    show_column_numbers         = true
    show_error_codes            = true
    show_error_context          = true
    strict_optional             = true
    warn_redundant_casts        = true
    warn_unreachable            = true
    warn_unused_ignores         = true

[tool.pytest.ini_options]
    addopts        = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --junitxml=.cache/pytest.xml"
    cache_dir      = ".cache/pytest"
    filterwarnings = ["error", "ignore::DeprecationWarning"]
    testpaths      = ["src", "tests"]
    xfail_strict   = true

[tool.ruff] # https://github.com/charliermarsh/ruff
    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["src", "tests"]
    target-version = "py313"

    [tool.ruff.lint]
        ignore = [
            "ANN204",  # Missing return type annotation for special method `__init__`
            "B006",    # mutable-argument-default
            "B008",    # function-call-in-default-argument
            "COM812",  # Trailing comma missing"
            "CPY001",  # Missing copyright notice at top of file
            "D107",    # undocumented-public-init
            "D213",    # multi-line-summary-second-line
            "D215",    # section-underline-not-over-indented
            "D406",    # new-line-after-section-name
            "D407",    # dashed-underline-after-section
            "D408",    # section-underline-after-name
            "D409",    # section-underline-matches-section-length
            "D413",    # blank-line-after-last-section
            "E501",    # line-too-long
            "FIX002",  # Line contains TODO, consider resolving the issue
            "ISC001",  # single-line-implicit-string-concatenation
            "N805",    # invalid-first-argument-name-for-method
            "PLR0913", # too-many-arguments
            "RSE102",  # Unnecessary parentheses on raised exception
            "S311",    # suspicious-non-cryptographic-random-usage
            "TD002",   # Missing author in TODO
            "TD003",   # Missing issue link on the line following this TODO
            "UP007",   # non-pep604-annotation
        ]
        per-file-ignores = { "cli.py" = ["PLR0912", "PLR0913", "PLR0917"], "tests/*.py" = [
            "A002",
            "A003",
            "ANN001",
            "ANN003",
            "ANN201",
            "ANN202",
            "ANN204",
            "ANN205",
            "ARG001",
            "ARG002",
            "ARG005",
            "D102",
            "D417",
            "DOC201",
            "DOC202",
            "E712",
            "ERA001",
            "F403",
            "FBT001",  # Boolean-typed positional argument in function definitio
            "FBT002",  # Boolean default positional argument in function definition
            "PGH003",
            "PLR0913",
            "PLR0917",
            "PLR2004",
            "PLR6301",
            "PLW1641",
            "S101",
            "SLF001",
        ] }
        select = ["ALL"]
        unfixable = [
            "ERA001", # Commented out code
            "F401",   # unused-import
            "F841",   # unused-variable
        ]
        [tool.ruff.lint.mccabe]
            # Unlike Flake8, default to a complexity level of 10.
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 6

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false
